# ankara-connector

./: .gitignore  Cargo.toml  LICENSE  README.md  package.json  tsconfig.json
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
crates/connector-app/: Cargo.toml
crates/connector-app/src/: instance.rs  main.rs
crates/connector-cloud/: Cargo.toml
crates/connector-cloud/src/: agent_ws.rs  auth.rs  heartbeat.rs  lib.rs
crates/connector-config/: Cargo.toml
crates/connector-config/src/: lib.rs
crates/connector-drivers/: Cargo.toml
crates/connector-drivers/src/: escpos.rs  esign.rs  host.rs  lib.rs
crates/connector-protocol/: Cargo.toml
crates/connector-protocol/src/: lib.rs
crates/connector-tray/: Cargo.toml
crates/connector-tray/src/: about.rs  lib.rs  menu.rs
crates/connector-update/: Cargo.toml
crates/connector-update/src/: lib.rs
native/tray/: AnkaraYazilimConnector.ps1  go.mod  main.go  open_unix.go  open_windows.go
scripts/: bench-memory.ts  build-linux.ts  build-macos.ts  build-rust-windows.ts  build-tray.ts  build-windows.ts  build.ts  install-daemon-windows.ps1  install-daemon.sh  install-windows-tray-local.ps1  prepare-windows-assets.ts
scripts/stress/: flood-events.ts
src/: about-html.test.ts  about-html.ts  agent.ts  alpr.test.ts  alpr.ts  auth-flow.ts  barcode.test.ts  barcode.ts  biometric-loader.ts  biometric.test.ts  biometric.ts  browser.ts  config.ts  crash-report.test.ts  crash-report.ts  dedup.test.ts  dedup.ts  device-queue.test.ts  device-queue.ts  driver-host.test.ts  driver-host.ts  errors.test.ts  errors.ts  escpos.test.ts  escpos.ts  esign-discover.test.ts  esign-discover.ts  esign-payment.test.ts  esign-windows.ts  esign.ts  event-bridge.test.ts  event-bridge.ts  heartbeat.test.ts  heartbeat.ts  index.ts  label.test.ts  label.ts  llrp.test.ts  llrp.ts  logger.test.ts  (+53 more)
src/drivers/: alpr.ts  barrier.ts  base.ts  biometric.ts  display.ts  drivers.test.ts  esign.ts  host.ts  onvif.ts  opos.ts  protocol.ts  rfid.ts  signage.ts  wiegand.ts
src/transports/: emulators.test.ts  emulators.ts  mock.ts  native-loader.ts  registry.ts  serial.ts  tcp.ts  transports.test.ts  types.ts  udp.ts  usb-hid.ts  usb-raw.ts
src/workers/: compute.worker.ts
types/: shims.d.ts
windows/installer/: connector.nsi
windows/tray/: AnkaraYazilimConnector.ps1  go.mod  main.go
