[package]
name = "connector-app"
version.workspace = true
edition.workspace = true

[[bin]]
name = "AnkaraConnector"
path = "src/main.rs"

[dependencies]
connector-config = { path = "../connector-config" }
connector-cloud = { path = "../connector-cloud" }
connector-tray = { path = "../connector-tray" }
connector-update = { path = "../connector-update" }
tokio = { workspace = true }
log = { workspace = true }
env_logger = "0.11"
anyhow = { workspace = true }
open = "5"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
  "Win32_Foundation",
  "Win32_System_Threading",
] }
